@@ -2,6 +2,10 @@
 
 	* KOAS-DPCamera.cs: 
 
+2016-04-19  Ted Thompson  <ted@federalproductions.com>
+
+	* KOAS-DPCamera.cs: 
+
 2016-04-18  Ted Thompson  <ted@federalproductions.com>
 
 	* AssemblyInfo.cs:
